# latexify-py

./: CODEOWNERS  LICENSE  README.md  pyproject.toml
docs/: parameters.md
docs/report/: neurips_2024.tex
examples/: TODO.ipynb  experiments.ipynb  latexify_examples.ipynb
src/integration_tests/: algorithmic_style_test.py
src/latexify/: __init__.py  analyzers.py  ast_utils.py  config.py  exceptions.py  frontend.py  generate_latex.py  ipython_wrappers.py  parser.py
src/latexify/codegen/: __init__.py  algorithmic_codegen.py  codegen_utils.py  custom_functions.py  experiments.ipynb  expression_codegen.py  expression_rules.py  function_codegen.py  identifier_converter.py  ipython_codegen.py  latex.py  plugin.py  plugin_stack.py
src/latexify/plugins/: jaxtyping.py  numpy.py  sum_prod.py
src/latexify/transformers/: assignment_reducer.py  aug_assign_replacer.py  docstring_remover.py  function_expander.py  identifier_replacer.py  prefix_trimmer.py
tests/: test_analyzers.py  test_ast_utils.py  test_frontend.py  test_generate_latex.py  test_parser.py  utils.py
tests/codegen/: test_algorithmic_codegen.py  test_codegen_utils.py  test_expression_codegen.py  test_expression_rules.py  test_function_codegen.py  test_function_codegen_match.py  test_identifier_converter.py  test_latex.py  test_numpy.py  test_sum_prod.py
tests/integration/: test_algorithmic_style.py  test_function_expansion.py  test_regression.py  utils.py
tests/transformers/: test_assignment_reducer.py  test_aug_assign_replacer.py  test_docstring_remover.py  test_function_expander.py  test_identifier_replacer.py  test_prefix_trimmer.py
