[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latexify-py"
dynamic = ["version"]
description = "Generates LaTeX math description from Python functions."
readme = "README.md"
requires-python = ">=3.7, <3.12"
license = "Apache-2.0"
authors = [
    { name = "Alexander Cai", email = "alexcai@college.harvard.edu" },
    { name = "Yusuke Oda", email = "odashi@inspiredco.ai" },
]
keywords = ["equation", "latex", "math", "mathematics", "tex"]
classifiers = [
    "Framework :: IPython",
    "Framework :: Jupyter",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = ["dill>=0.3.2"]

[project.urls]
Homepage = "https://github.com/google/latexify_py"
"Bug Tracker" = "https://github.com/google/latexify_py/issues"

[project.optional-dependencies]
test = [
    "notebook",
    "numpy",
    "jaxtyping",
    "pytest",
]

[tool.ruff.lint]
ignore = ["N802", "EM101", "EM102", "FBT001", "TRY003", "FBT002", "PLR2004", "RET505", "S101"]
per-file-ignores = { "tests/**.py" = ["RET504", "ARG001"] }

[tool.hatch.envs.hatch-test]
features = ["test"]

[tool.hatch.build.targets.wheel]
packages = ["src/latexify"]

[tool.hatch.version]
path = "src/latexify/_version.py"
